# AM_Thermomechanical_Solver

./: .gitignore  README.md  convert.py  environment.yml  pyproject.toml  run_sim.py  sim_automator.py
docs/files/: 1.avi  2.avi
examples/0_properties/: IN718_Alpha_Debroy.txt  IN718_Yield_Debroy.txt  IN718_Young_Debroy.txt  TI64_Alpha_Debroy.txt  TI64_Yield_Debroy.txt  TI64_Young_Debroy.txt  TI64_a_hard.txt  TI64_cond.txt  TI64_cp.txt
examples/Lshape/: Lshape_bound_toolpath.crs  Lshape_zigzag_toolpath.crs  main_Lshape_bound.py  main_Lshape_zigzag.py
examples/Lshape/results_bound/: bound_0.vtk  bound_1.vtk  bound_10.vtk  bound_11.vtk  bound_12.vtk  bound_13.vtk  bound_14.vtk  bound_2.vtk  bound_3.vtk  bound_4.vtk  bound_5.vtk  bound_6.vtk  bound_7.vtk  bound_8.vtk  bound_9.vtk
examples/Lshape/results_zigzag/: zigzag_0.vtk  zigzag_1.vtk  zigzag_10.vtk  zigzag_11.vtk  zigzag_12.vtk  zigzag_13.vtk  zigzag_14.vtk  zigzag_15.vtk  zigzag_2.vtk  zigzag_3.vtk  zigzag_4.vtk  zigzag_5.vtk  zigzag_6.vtk  zigzag_7.vtk  zigzag_8.vtk  zigzag_9.vtk
examples/PSED/: preprocess.ipynb  sim_automator.py  template.ipynb
examples/PSED/materials/: 1018_cp.txt
examples/clad/: main_clad.py  toolpath.crs
examples/data/materials/: 1018_cond.txt  (+1 more)
examples/wall/: main_wall.py  main_wall_cpu.py  toolpath.crs
includes/: gamma.py  preprocessor.py
laser_inputs/thin_wall/: LP_2.csv  LP_3.csv  LP_4.csv  LP_5.csv  gen_misc_prof.ipynb
laser_inputs/thin_wall_LP/: gen_misc_prof.ipynb
materials/: IN718_cond.txt
src/: sim_automator.py
src/gamma/: interface.py
tests/: README.md
(+45 files in other folders)
