[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gamma"
version = "0.0.1"
authors = [
  { name="Shuheng Liao" },
  { name="Ashkan Golgoon" },
]
description = "A GPU-accelerated FEM solver for residual stress simulation in additive manufacturing using CuPy"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ShuhengLiao/AM_Thermomechanical_Solver"
"Bug Tracker" = "https://github.com/ShuhengLiao/AM_Thermomechanical_Solver/issues"